[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/title.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Title.gd" type="Script" id=2]
[ext_resource path="res://Assets/pasture.png" type="Texture" id=3]
[ext_resource path="res://Assets/title_score.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Fonts/Boots&Spurs_personal_use_only.ttf"

[sub_resource type="DynamicFont" id=8]
size = 70
outline_size = 3
outline_color = Color( 0.145098, 0.0666667, 0.0117647, 1 )
font_data = SubResource( 7 )

[node name="Title" type="Node2D"]
script = ExtResource( 2 )

[node name="Pasture" type="TextureRect" parent="."]
margin_right = 512.0
margin_bottom = 512.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 256, 256 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLogo" type="AnimatedSprite" parent="."]
scale = Vector2( 8, 8 )
frames = SubResource( 6 )
frame = 2
playing = true

[node name="PlayButton" type="Button" parent="."]
margin_left = 128.0
margin_top = 197.0
margin_right = 384.0
margin_bottom = 315.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 8 )
text = "Play"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitlePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
pitch_scale = 0.77
autoplay = true

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
